# freeimage-easyrpg

./: CMakeLists.txt  FreeImage.pc.in
Source/: FreeImage.h  Plugin.h
Source/FreeImage/: GetType.cpp  Plugin.cpp  PluginPNG.cpp  ZLibInterface.cpp
TestAPI/: MainTestSuite.cpp  testHeaderOnly.cpp  testImageType.cpp  testWrappedBuffer.cpp
